# spreadsheet-ods-formula

./: .gitignore  .~lock.fn.csv#  CHANGES.md  Cargo.toml  README.md  fn.csv
examples/: create_fn.rs
examples/create_fn/: spec.txt
examples/create_fn/fn-list/: diff.txt  generated-all.txt  generated.txt  libre-office-7.6.txt
generate_src/: create_fn.rs  generate.rs  spec.txt  special_case.txt
src/: bit.rs  bitop.rs  cmp.rs  compare.rs  complex.rs  conv.rs  database.rs  date.rs  date_man.rs  db.rs  ext.rs  extaccess.rs  fin.rs  generated.rs  info.rs  info_man.rs  lib.rs  logic.rs  logical.rs  logical_man.rs  lookup.rs  lookup_man.rs  marker_traits.txt  math.rs  math_man.rs  matrix.rs  op.rs  operator.rs  round.rs  rounding.rs  stat.rs  text.rs  textb.rs
src/bit/: generated.rs
src/complex/: generated.rs
src/database/: generated.rs
src/date/: generated.rs
src/db/: generated.rs
src/fin/: generated.rs
src/info/: generated.rs
src/logic/: generated.rs
src/logical/: generated.rs
src/lookup/: generated.rs
src/math/: generated.rs
src/matrix/: generated.rs
src/round/: generated.rs
src/stat/: generated.rs
tests/: build_stuff.rs  create_fn.rs  result_test.rs  spec.txt  test_formula.rs
tests/fn-list/: diff.txt
