[package]
name = "spreadsheet-ods-formula"
version = "0.19.0"
authors = ["thomasscharler <thscharler@gmail.com>"]
edition = "2021"
description = "Create ods-formulas for use with spreadsheet-ods."
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/spreadsheet-ods-formula"
readme = "README.md"
keywords = ["ODS", "spreadsheet", "OpenOffice", "LibreOffice"]
categories = ["parser-implementations"]
exclude = [".idea/*", ".gitignore"]

[lib]
name = "spreadsheet_ods_formula"

[dependencies.spreadsheet-ods]
version = "0.19.0"
features = ["use_decimal", "all_locales"]

[dev-dependencies.nom]
version = "7.1"
features = [ "alloc" ]

[dev-dependencies.nom_locate]
version = "4.2"

[dev-dependencies.kparse]
version = "3.0"