[package]
name = "spreadsheet-ods-formula"
version = "0.21.0"
authors = ["thomasscharler <thscharler@gmail.com>"]
edition = "2021"
description = "Create ods-formulas for use with spreadsheet-ods."
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/spreadsheet-ods-formula"
readme = "README.md"
keywords = ["ODS", "spreadsheet", "OpenOffice", "LibreOffice"]
categories = ["parser-implementations"]
exclude = [".idea/*", ".gitignore"]

[lib]
name = "spreadsheet_ods_formula"

[dependencies]
nom = "7.1"
nom_locate = "4.2"

[dependencies.spreadsheet-ods]
version = "0.21"
features = ["use_decimal", "all_locales"]
#path = "../spreadsheet-ods"

[dev-dependencies.kparse]
version = "3.0"
#path = "../kparse"